--- a/Setup/Applications/WinRmApp/Defaults.yaml
+++ b/Setup/Applications/WinRmApp/Defaults.yaml
@@ -2,7 +2,7 @@ harnessApiVersion: '1.0'
 type: APPLICATION_DEFAULTS
 defaults:
   - name: BACKUP_PATH
-    value: $HOME/${app.name}/${service.name}/${env.name}/backup/${timestampId}
+    value: '%USERPROFILE%'
   - name: STAGING_PATH
     value: $HOME/${app.name}/${service.name}/${env.name}/staging/${timestampId}
   - name: RUNTIME_PATH
