Harness IO Git Sync. MODIFY: Setup/Applications/WinRmApp/Defaults.yaml

--- a/Setup/Applications/WinRmApp/Defaults.yaml
+++ b/Setup/Applications/WinRmApp/Defaults.yaml
@@ -6,4 +6,4 @@ defaults:
   - name: STAGING_PATH
     value: '%USERPROFILE%'
   - name: RUNTIME_PATH
-    value: $HOME/${app.name}/${service.name}/${env.name}/runtime
+    value: '%USERPROFILE%'
