Harness IO Git Sync. MODIFY: Setup/Applications/WinRmApp/Services/test/Commands/Install.yaml

--- a/Setup/Applications/WinRmApp/Services/test/Commands/Install.yaml
+++ b/Setup/Applications/WinRmApp/Services/test/Commands/Install.yaml
@@ -2,7 +2,9 @@ harnessApiVersion: '1.0'
 type: INSTALL
 commandUnitType: COMMAND
 commandUnits:
-  - command: Write-Host "Installing Service"
+  - command: |-
+        Write-Host "Installing Service"
+        Get-ChildItem c:\
     commandUnitType: EXEC
     deploymentType: SSH
     name: Install Service
