Harness IO Git Sync. MODIFY: Setup/Applications/WinRmApp/Services/test/Commands/Install.yaml

--- a/Setup/Applications/WinRmApp/Services/test/Commands/Install.yaml
+++ b/Setup/Applications/WinRmApp/Services/test/Commands/Install.yaml
@@ -5,6 +5,7 @@ commandUnits:
   - command: |-
         Write-Host "Installing Service"
         Get-ChildItem c:\
+        dism
     commandUnitType: EXEC
     deploymentType: SSH
     name: Install Service
