--- a/Setup/Applications/WinRmApp/Services/test2/Commands/Stop.yaml
+++ b/Setup/Applications/WinRmApp/Services/test2/Commands/Stop.yaml
@@ -2,7 +2,7 @@ harnessApiVersion: '1.0'
 type: STOP
 commandUnitType: COMMAND
 commandUnits:
-- command: echo "service stop script should be added here"
+- command: echo "service stop script should be added here."
   commandUnitType: EXEC
   deploymentType: SSH
   name: Stop Service
