--- a/Setup/Applications/WinRmApp/Services/test/Commands/MyExec.yaml
+++ b/Setup/Applications/WinRmApp/Services/test/Commands/MyExec.yaml
@@ -1,4 +1,11 @@
 harnessApiVersion: '1.0'
 type: OTHER
 commandUnitType: COMMAND
+commandUnits:
+- command: dir
+  commandUnitType: EXEC
+  deploymentType: SSH
+  name: Exec
+  scriptType: POWERSHELL
+  workingDirectory: 'c:'
 targetToAllEnv: true
