--- a/Setup/Applications/WinRmApp/Workflows/DeployIIS.yaml
+++ b/Setup/Applications/WinRmApp/Workflows/DeployIIS.yaml
@@ -2,102 +2,107 @@ harnessApiVersion: '1.0'
 type: BASIC
 envName: env
 failureStrategies:
-  - executionScope: WORKFLOW
-    failureTypes:
-      - APPLICATION_ERROR
-    repairActionCode: ROLLBACK_WORKFLOW
-    retryCount: 0
+- executionScope: WORKFLOW
+  failureTypes:
+  - APPLICATION_ERROR
+  repairActionCode: ROLLBACK_WORKFLOW
+  retryCount: 0
 notificationRules:
-  - conditions:
-      - FAILED
-    executionScope: WORKFLOW
-    notificationGroups:
-      - Account Administrator
+- conditions:
+  - FAILED
+  executionScope: WORKFLOW
+  notificationGroups:
+  - Account Administrator
 phases:
-  - type: WINRM
-    computeProviderName: physical_data_center
-    daemonSet: false
-    infraMappingName: IIS-WINRM
-    name: Phase 1
-    phaseSteps:
-      - type: PROVISION_NODE
-        name: Provision Nodes
-        steps:
-          - type: DC_NODE_SELECT
-            name: Select Nodes
-            properties:
-                instanceCount: 1
-                excludeSelectedHostsFromFuturePhases: true
-                specificHosts: false
-        stepsInParallel: false
-      - type: DISABLE_SERVICE
-        name: Disable Service
-        stepsInParallel: false
-      - type: DEPLOY_SERVICE
-        name: Deploy Service
-        steps:
-          - type: COMMAND
-            name: Install
-            properties:
-                commandName: Install
-        stepsInParallel: false
-      - type: ENABLE_SERVICE
-        name: Enable Service
-        stepsInParallel: false
-      - type: VERIFY_SERVICE
-        name: Verify Service
-        stepsInParallel: false
-      - type: WRAP_UP
-        name: Wrap Up
-        stepsInParallel: false
-    provisionNodes: false
-    serviceName: test
+- type: WINRM
+  computeProviderName: physical_data_center
+  daemonSet: false
+  infraMappingName: IIS-WINRM
+  name: Phase 1
+  phaseSteps:
+  - type: PROVISION_NODE
+    name: Provision Nodes
+    steps:
+    - type: DC_NODE_SELECT
+      name: Select Nodes
+      properties:
+        instanceCount: 1
+        excludeSelectedHostsFromFuturePhases: true
+        specificHosts: false
+    stepsInParallel: false
+  - type: DISABLE_SERVICE
+    name: Disable Service
+    steps:
+    - type: COMMAND
+      name: MyExec
+      properties:
+        commandName: MyExec
+    stepsInParallel: false
+  - type: DEPLOY_SERVICE
+    name: Deploy Service
+    steps:
+    - type: COMMAND
+      name: Install
+      properties:
+        commandName: Install
+    stepsInParallel: false
+  - type: ENABLE_SERVICE
+    name: Enable Service
+    stepsInParallel: false
+  - type: VERIFY_SERVICE
+    name: Verify Service
+    stepsInParallel: false
+  - type: WRAP_UP
+    name: Wrap Up
+    stepsInParallel: false
+  provisionNodes: false
+  serviceName: test
 rollbackPhases:
-  - type: WINRM
-    computeProviderName: physical_data_center
-    daemonSet: false
-    infraMappingName: IIS-WINRM
-    name: Rollback Phase 1
-    phaseNameForRollback: Phase 1
-    phaseSteps:
-      - type: DISABLE_SERVICE
-        name: Disable Service
-        phaseStepNameForRollback: Enable Service
-        statusForRollback: SUCCESS
-        stepsInParallel: false
-      - type: STOP_SERVICE
-        name: Stop Service
-        phaseStepNameForRollback: Deploy Service
-        statusForRollback: SUCCESS
-        steps:
-          - type: COMMAND
-            name: Stop
-            properties:
-                commandName: Stop
-        stepsInParallel: false
-      - type: DEPLOY_SERVICE
-        name: Deploy Service
-        phaseStepNameForRollback: Deploy Service
-        statusForRollback: SUCCESS
-        steps:
-          - type: COMMAND
-            name: Install
-            properties:
-                commandName: Install
-        stepsInParallel: false
-      - type: ENABLE_SERVICE
-        name: Enable Service
-        phaseStepNameForRollback: Disable Service
-        statusForRollback: SUCCESS
-        stepsInParallel: false
-      - type: VERIFY_SERVICE
-        name: Verify Service
-        phaseStepNameForRollback: Deploy Service
-        statusForRollback: SUCCESS
-        stepsInParallel: false
-      - type: WRAP_UP
-        name: Wrap Up
-        stepsInParallel: false
-    provisionNodes: false
-    serviceName: test
+- type: WINRM
+  computeProviderName: physical_data_center
+  daemonSet: false
+  infraMappingName: IIS-WINRM
+  name: Rollback Phase 1
+  phaseNameForRollback: Phase 1
+  phaseSteps:
+  - type: DISABLE_SERVICE
+    name: Disable Service
+    phaseStepNameForRollback: Enable Service
+    statusForRollback: SUCCESS
+    stepsInParallel: false
+  - type: STOP_SERVICE
+    name: Stop Service
+    phaseStepNameForRollback: Deploy Service
+    statusForRollback: SUCCESS
+    steps:
+    - type: COMMAND
+      name: Stop
+      properties:
+        commandName: Stop
+    stepsInParallel: false
+  - type: DEPLOY_SERVICE
+    name: Deploy Service
+    phaseStepNameForRollback: Deploy Service
+    statusForRollback: SUCCESS
+    steps:
+    - type: COMMAND
+      name: Install
+      properties:
+        commandName: Install
+    stepsInParallel: false
+  - type: ENABLE_SERVICE
+    name: Enable Service
+    phaseStepNameForRollback: Disable Service
+    statusForRollback: SUCCESS
+    stepsInParallel: false
+  - type: VERIFY_SERVICE
+    name: Verify Service
+    phaseStepNameForRollback: Deploy Service
+    statusForRollback: SUCCESS
+    stepsInParallel: false
+  - type: WRAP_UP
+    name: Wrap Up
+    stepsInParallel: false
+  provisionNodes: false
+  serviceName: test
 templatized: false
