Harness IO Git Sync. MODIFY: Setup/Applications/WinRmApp/Services/test/Commands/MyExec.yaml

--- a/Setup/Applications/WinRmApp/Services/test/Commands/MyExec.yaml
+++ b/Setup/Applications/WinRmApp/Services/test/Commands/MyExec.yaml
@@ -6,6 +6,6 @@ commandUnits:
   commandUnitType: EXEC
   deploymentType: SSH
   name: Exec
-  scriptType: BASH
+  scriptType: POWERSHELL
   workingDirectory: 'c:'
 targetToAllEnv: true
