--- a/Setup/Applications/SshTest/Workflows/test_winrm.yaml
+++ b/Setup/Applications/SshTest/Workflows/test_winrm.yaml
@@ -2,98 +2,98 @@ harnessApiVersion: '1.0'
 type: BASIC
 envName: Prod
 failureStrategies:
-  - executionScope: WORKFLOW
-    failureTypes:
-      - APPLICATION_ERROR
-    repairActionCode: ROLLBACK_WORKFLOW
-    retryCount: 0
+- executionScope: WORKFLOW
+  failureTypes:
+  - APPLICATION_ERROR
+  repairActionCode: ROLLBACK_WORKFLOW
+  retryCount: 0
 notificationRules:
-  - conditions:
-      - FAILED
-    executionScope: WORKFLOW
-    notificationGroups:
-      - Account Administrator
+- conditions:
+  - FAILED
+  executionScope: WORKFLOW
+  notificationGroups:
+  - Account Administrator
 phases:
-  - type: WINRM
-    computeProviderName: physical_data_center
-    daemonSet: false
-    infraMappingName: winrminframap1
-    name: Phase 1
-    phaseSteps:
-      - type: PROVISION_NODE
-        name: Provision Nodes
-        steps:
-          - type: DC_NODE_SELECT
-            name: Select Nodes
-            properties:
-                instanceCount: 1
-                excludeSelectedHostsFromFuturePhases: true
-                specificHosts: false
-        stepsInParallel: false
-      - type: DISABLE_SERVICE
-        name: Disable Service
-        steps:
-          - type: SHELL_SCRIPT
-            name: Shell Script
-            properties:
-                connectionAttributes: nu1YJHFmToGzg8cPgOHsnw
-                commandPath: c:\
-                scriptType: POWERSHELL
-                host: 104.209.40.95
-                scriptString: Get-ChildItem
-                timeoutMillis: 3600000
-                connectionType: WINRM
-        stepsInParallel: false
-      - type: DEPLOY_SERVICE
-        name: Deploy Service
-        stepsInParallel: false
-      - type: ENABLE_SERVICE
-        name: Enable Service
-        stepsInParallel: false
-      - type: VERIFY_SERVICE
-        name: Verify Service
-        stepsInParallel: false
-      - type: WRAP_UP
-        name: Wrap Up
-        stepsInParallel: false
-    provisionNodes: false
-    serviceName: legacy
+- type: WINRM
+  computeProviderName: physical_data_center
+  daemonSet: false
+  infraMappingName: winrminframap1
+  name: Phase 1
+  phaseSteps:
+  - type: PROVISION_NODE
+    name: Provision Nodes
+    steps:
+    - type: DC_NODE_SELECT
+      name: Select Nodes
+      properties:
+        instanceCount: 1
+        excludeSelectedHostsFromFuturePhases: true
+        specificHosts: false
+    stepsInParallel: false
+  - type: DISABLE_SERVICE
+    name: Disable Service
+    steps:
+    - type: SHELL_SCRIPT
+      name: Shell Script
+      properties:
+        connectionAttributes: nu1YJHFmToGzg8cPgOHsnw
+        commandPath: c:\
+        scriptType: POWERSHELL
+        host: 104.209.40.95
+        scriptString: Get-ChildItem
+        timeoutMillis: 3600000
+        connectionType: LOCAL
+    stepsInParallel: false
+  - type: DEPLOY_SERVICE
+    name: Deploy Service
+    stepsInParallel: false
+  - type: ENABLE_SERVICE
+    name: Enable Service
+    stepsInParallel: false
+  - type: VERIFY_SERVICE
+    name: Verify Service
+    stepsInParallel: false
+  - type: WRAP_UP
+    name: Wrap Up
+    stepsInParallel: false
+  provisionNodes: false
+  serviceName: legacy
 rollbackPhases:
-  - type: WINRM
-    computeProviderName: physical_data_center
-    daemonSet: false
-    infraMappingName: winrminframap1
-    name: Rollback Phase 1
-    phaseNameForRollback: Phase 1
-    phaseSteps:
-      - type: DISABLE_SERVICE
-        name: Disable Service
-        phaseStepNameForRollback: Enable Service
-        statusForRollback: SUCCESS
-        stepsInParallel: false
-      - type: STOP_SERVICE
-        name: Stop Service
-        phaseStepNameForRollback: Deploy Service
-        statusForRollback: SUCCESS
-        stepsInParallel: false
-      - type: DEPLOY_SERVICE
-        name: Deploy Service
-        phaseStepNameForRollback: Deploy Service
-        statusForRollback: SUCCESS
-        stepsInParallel: false
-      - type: ENABLE_SERVICE
-        name: Enable Service
-        phaseStepNameForRollback: Disable Service
-        statusForRollback: SUCCESS
-        stepsInParallel: false
-      - type: VERIFY_SERVICE
-        name: Verify Service
-        phaseStepNameForRollback: Deploy Service
-        statusForRollback: SUCCESS
-        stepsInParallel: false
-      - type: WRAP_UP
-        name: Wrap Up
-        stepsInParallel: false
-    provisionNodes: false
-    serviceName: legacy
+- type: WINRM
+  computeProviderName: physical_data_center
+  daemonSet: false
+  infraMappingName: winrminframap1
+  name: Rollback Phase 1
+  phaseNameForRollback: Phase 1
+  phaseSteps:
+  - type: DISABLE_SERVICE
+    name: Disable Service
+    phaseStepNameForRollback: Enable Service
+    statusForRollback: SUCCESS
+    stepsInParallel: false
+  - type: STOP_SERVICE
+    name: Stop Service
+    phaseStepNameForRollback: Deploy Service
+    statusForRollback: SUCCESS
+    stepsInParallel: false
+  - type: DEPLOY_SERVICE
+    name: Deploy Service
+    phaseStepNameForRollback: Deploy Service
+    statusForRollback: SUCCESS
+    stepsInParallel: false
+  - type: ENABLE_SERVICE
+    name: Enable Service
+    phaseStepNameForRollback: Disable Service
+    statusForRollback: SUCCESS
+    stepsInParallel: false
+  - type: VERIFY_SERVICE
+    name: Verify Service
+    phaseStepNameForRollback: Deploy Service
+    statusForRollback: SUCCESS
+    stepsInParallel: false
+  - type: WRAP_UP
+    name: Wrap Up
+    stepsInParallel: false
+  provisionNodes: false
+  serviceName: legacy
 templatized: false
