--- a/Setup/Applications/SshTest/Workflows/test_winrm.yaml
+++ b/Setup/Applications/SshTest/Workflows/test_winrm.yaml
@@ -38,7 +38,7 @@ phases:
       properties:
         connectionAttributes: nu1YJHFmToGzg8cPgOHsnw
         commandPath: c:\
-        scriptType: BASH
+        scriptType: POWERSHELL
         host: 104.209.40.95
         scriptString: |-
           ls
