--- a/Setup/Applications/SshTest/Workflows/test_winrm.yaml
+++ b/Setup/Applications/SshTest/Workflows/test_winrm.yaml
@@ -45,7 +45,7 @@ phases:
           echo 'hello world'
         timeoutMillis: 3600000
         connectionType: WINRM
-        executeOnDelegate: false
+        executeOnDelegate: true
     stepsInParallel: false
   - type: DEPLOY_SERVICE
     name: Deploy Service
