--- a/Setup/Applications/SshTest/Environments/Test/Service Infrastructure/aws_ssh.yaml
+++ b/Setup/Applications/SshTest/Environments/Test/Service Infrastructure/aws_ssh.yaml
@@ -1,6 +1,6 @@
 harnessApiVersion: '1.0'
 type: AWS_SSH
-autoScalingGroup: Abaris__AMI__Test__deploy__v2__QA__Env__1
+autoScalingGroup: QA Targets
 computeProviderName: 1aws-key
 computeProviderType: AWS
 connectionType: Wings Key
