Harness IO Git Sync. MODIFY: Setup/Applications/SshTest/Workflows/test_winrm.yaml

--- a/Setup/Applications/SshTest/Workflows/test_winrm.yaml
+++ b/Setup/Applications/SshTest/Workflows/test_winrm.yaml
@@ -46,6 +46,15 @@ phases:
         timeoutMillis: 3600000
         connectionType: WINRM
         executeOnDelegate: true
+    - type: SHELL_SCRIPT
+      name: TestExecuteOnDelegate
+      properties:
+        commandPath: c:\temp
+        scriptType: POWERSHELL
+        scriptString: ls
+        timeoutMillis: 600000
+        connectionType: SSH
+        executeOnDelegate: true
     stepsInParallel: false
   - type: DEPLOY_SERVICE
     name: Deploy Service
