Harness IO Git Sync. MODIFY: Setup/Applications/SshTest/Workflows/test_winrm.yaml

--- a/Setup/Applications/SshTest/Workflows/test_winrm.yaml
+++ b/Setup/Applications/SshTest/Workflows/test_winrm.yaml
@@ -52,7 +52,9 @@ phases:
         commandPath: /etc
         scriptType: BASH
         host: 40.125.66.41
-        scriptString: ls
+        scriptString: |-
+          ls
+          pwd
         timeoutMillis: 600000
         sshKeyRef: OnP7d9irT1CBDqiu-TpDsQ
         connectionType: SSH
