Harness IO Git Sync. MODIFY: Setup/Applications/SshTest/Workflows/test_winrm.yaml

--- a/Setup/Applications/SshTest/Workflows/test_winrm.yaml
+++ b/Setup/Applications/SshTest/Workflows/test_winrm.yaml
@@ -53,7 +53,7 @@ phases:
         scriptType: BASH
         host: 40.125.66.41
         scriptString: |-
-          ls
+          echo 'hello world'
           pwd
         timeoutMillis: 600000
         sshKeyRef: OnP7d9irT1CBDqiu-TpDsQ
