--- a/Setup/Applications/SshTest/Workflows/test_winrm.yaml
+++ b/Setup/Applications/SshTest/Workflows/test_winrm.yaml
@@ -37,7 +37,7 @@ phases:
       name: Shell Script
       properties:
         connectionAttributes: nu1YJHFmToGzg8cPgOHsnw
-        commandPath: c:\temp
+        commandPath: C:\Users\punee
         scriptType: BASH
         host: 104.209.40.95
         scriptString: |-
