Harness IO Git Sync. MODIFY: Setup/Applications/SshTest/Workflows/test_winrm.yaml

--- a/Setup/Applications/SshTest/Workflows/test_winrm.yaml
+++ b/Setup/Applications/SshTest/Workflows/test_winrm.yaml
@@ -40,7 +40,7 @@ phases:
         scriptType: BASH
         host: 104.209.40.95
         scriptString: |-
-          ls
+          ls $HOME
           echo 'hello world'
         timeoutMillis: 3600000
         connectionType: WINRM
