--- a/Setup/Applications/AzureKey/Workflows/test.yaml
+++ b/Setup/Applications/AzureKey/Workflows/test.yaml
@@ -2,94 +2,96 @@ harnessApiVersion: '1.0'
 type: BASIC
 envName: Prod
 failureStrategies:
-  - executionScope: WORKFLOW
-    failureTypes:
-      - APPLICATION_ERROR
-    repairActionCode: ROLLBACK_WORKFLOW
-    retryCount: 0
+- executionScope: WORKFLOW
+  failureTypes:
+  - APPLICATION_ERROR
+  repairActionCode: ROLLBACK_WORKFLOW
+  retryCount: 0
 notificationRules:
-  - conditions:
-      - FAILED
-    executionScope: WORKFLOW
-    notificationGroups:
-      - Account Administrator
+- conditions:
+  - FAILED
+  executionScope: WORKFLOW
+  notificationGroups:
+  - Account Administrator
 phases:
-  - type: KUBERNETES
-    computeProviderName: kubernetes_cluster2
-    infraMappingName: puneet-inframap-dk1
-    name: Phase 1
-    phaseSteps:
-      - type: CONTAINER_SETUP
-        name: Setup Container
-        steps:
-          - type: KUBERNETES_SETUP
-            name: Kubernetes Service Setup
-            properties:
-                serviceType: None
-                replicationControllerName: ${app.name}.${service.name}.${env.name}
-                fixedInstances: '1'
-                desiredInstanceCount: fixedInstances
-                minAutoscaleInstances: 0
-                maxInstances: 10
-                targetCpuUtilizationPercentage: 0
-                useAutoscaler: false
-                resizeStrategy: DOWNSIZE_OLD_FIRST
-                serviceSteadyStateTimeout: 10
-                maxAutoscaleInstances: 0
-        stepsInParallel: false
-      - type: CONTAINER_DEPLOY
-        name: Deploy Containers
-        steps:
-          - type: KUBERNETES_DEPLOY
-            name: Upgrade Containers
-            properties:
-                commandName: Resize Replication Controller
-                instanceUnitType: COUNT
-                instanceCount: '1'
-        stepsInParallel: false
-      - type: VERIFY_SERVICE
-        name: Verify Service
-        stepsInParallel: false
-      - type: WRAP_UP
-        name: Wrap Up
-        stepsInParallel: false
-    provisionNodes: false
-    serviceName: keytest
+- type: KUBERNETES
+  computeProviderName: kubernetes_cluster2
+  daemonSet: false
+  infraMappingName: puneet-inframap-dk1
+  name: Phase 1
+  phaseSteps:
+  - type: CONTAINER_SETUP
+    name: Setup Container
+    steps:
+    - type: KUBERNETES_SETUP
+      name: Kubernetes Service Setup
+      properties:
+        serviceType: None
+        replicationControllerName: ${app.name}.${service.name}.${env.name}
+        fixedInstances: '1'
+        desiredInstanceCount: fixedInstances
+        minAutoscaleInstances: 0
+        maxInstances: '10'
+        targetCpuUtilizationPercentage: 0
+        useAutoscaler: false
+        resizeStrategy: DOWNSIZE_OLD_FIRST
+        serviceSteadyStateTimeout: 10
+        maxAutoscaleInstances: 0
+    stepsInParallel: false
+  - type: CONTAINER_DEPLOY
+    name: Deploy Containers
+    steps:
+    - type: KUBERNETES_DEPLOY
+      name: Upgrade Containers
+      properties:
+        commandName: Resize Replication Controller
+        instanceUnitType: COUNT
+        instanceCount: '1'
+    stepsInParallel: false
+  - type: VERIFY_SERVICE
+    name: Verify Service
+    stepsInParallel: false
+  - type: WRAP_UP
+    name: Wrap Up
+    stepsInParallel: false
+  provisionNodes: false
+  serviceName: keytest
 rollbackPhases:
-  - type: KUBERNETES
-    computeProviderName: kubernetes_cluster2
-    infraMappingName: puneet-inframap-dk1
-    name: Rollback Phase 1
-    phaseNameForRollback: Phase 1
-    phaseSteps:
-      - type: CONTAINER_DEPLOY
-        name: Deploy Containers
-        phaseStepNameForRollback: Deploy Containers
-        statusForRollback: SUCCESS
-        steps:
-          - type: KUBERNETES_DEPLOY_ROLLBACK
-            name: Rollback Containers
-            properties:
-                rollback: true
-        stepsInParallel: false
-      - type: CONTAINER_SETUP
-        name: Setup Container
-        phaseStepNameForRollback: Setup Container
-        statusForRollback: SUCCESS
-        steps:
-          - type: KUBERNETES_SETUP_ROLLBACK
-            name: Rollback Kubernetes Setup
-            properties:
-                rollback: true
-        stepsInParallel: false
-      - type: VERIFY_SERVICE
-        name: Verify Service
-        phaseStepNameForRollback: Deploy Containers
-        statusForRollback: SUCCESS
-        stepsInParallel: false
-      - type: WRAP_UP
-        name: Wrap Up
-        stepsInParallel: false
-    provisionNodes: false
-    serviceName: keytest
+- type: KUBERNETES
+  computeProviderName: kubernetes_cluster2
+  daemonSet: false
+  infraMappingName: puneet-inframap-dk1
+  name: Rollback Phase 1
+  phaseNameForRollback: Phase 1
+  phaseSteps:
+  - type: CONTAINER_DEPLOY
+    name: Deploy Containers
+    phaseStepNameForRollback: Deploy Containers
+    statusForRollback: SUCCESS
+    steps:
+    - type: KUBERNETES_DEPLOY_ROLLBACK
+      name: Rollback Containers
+      properties:
+        rollback: true
+    stepsInParallel: false
+  - type: CONTAINER_SETUP
+    name: Setup Container
+    phaseStepNameForRollback: Setup Container
+    statusForRollback: SUCCESS
+    steps:
+    - type: KUBERNETES_SETUP_ROLLBACK
+      name: Rollback Kubernetes Setup
+      properties:
+        rollback: true
+    stepsInParallel: false
+  - type: VERIFY_SERVICE
+    name: Verify Service
+    phaseStepNameForRollback: Deploy Containers
+    statusForRollback: SUCCESS
+    stepsInParallel: false
+  - type: WRAP_UP
+    name: Wrap Up
+    stepsInParallel: false
+  provisionNodes: false
+  serviceName: keytest
 templatized: false
