--- a/Setup/Applications/SshTest/Workflows/test_winrm.yaml
+++ b/Setup/Applications/SshTest/Workflows/test_winrm.yaml
@@ -40,6 +40,7 @@ phases:
         scriptType: BASH
         host: 104.209.40.95
         scriptString: |-
+          pwd
           ls $HOME
           echo 'hello world'
         timeoutMillis: 3600000
