Harness IO Git Sync. MODIFY: Setup/Applications/SshTest/Workflows/test_winrm.yaml

--- a/Setup/Applications/SshTest/Workflows/test_winrm.yaml
+++ b/Setup/Applications/SshTest/Workflows/test_winrm.yaml
@@ -37,6 +37,7 @@ phases:
       name: Shell Script
       properties:
         connectionAttributes: nu1YJHFmToGzg8cPgOHsnw
+        commandPath: c:\temp
         scriptType: BASH
         host: 104.209.40.95
         scriptString: |-
