--- a/Setup/Applications/WinRmApp/Workflows/DeployIIS.yaml
+++ b/Setup/Applications/WinRmApp/Workflows/DeployIIS.yaml
@@ -45,6 +45,10 @@ phases:
       name: Install
       properties:
         commandName: Install
+    - type: COMMAND
+      name: Create-Site_2
+      properties:
+        commandName: Create-Site
     stepsInParallel: false
   - type: ENABLE_SERVICE
     name: Enable Service
