--- a/Setup/Applications/WinRmApp/Services/TestWebApp/Commands/Install.yaml
+++ b/Setup/Applications/WinRmApp/Services/TestWebApp/Commands/Install.yaml
@@ -2,7 +2,17 @@ harnessApiVersion: '1.0'
 type: INSTALL
 commandUnitType: COMMAND
 commandUnits:
-- command: Write-Host "Installing Service"
+- command: |-
+    $siteName="Default Web Site"
+    $appName="demo"
+    $deploymentId=[guid]::NewGuid().ToString()
+    $artifactFilename = $env:TEMP + $deploymentId + ".zip"
+    $appPhysicalDirectory=$env:SystemDrive + "\App\" + $deploymentId
+    Write-Host "Downloading artifact file to" $artifactFilename
+    Invoke-WebRequest -Uri https://harnessbuildshare.blob.core.windows.net/build/testapp/test-app-1.0.zip -OutFile $artifactFilename
+    Expand-Archive -Path $artifactFilename -DestinationPath $appPhysicalDirectory
+    $VirtualAppPath = 'IIS:\Sites\' + $siteName + '\' + $appName
+    New-Item -Path $VirtualAppPath -Type Application -PhysicalPath (Get-ChildItem $appPhysicalDirectory)[0].FullName -Force
   commandUnitType: EXEC
   deploymentType: SSH
   name: Install Service
