--- a/Setup/Applications/WinRmApp/Services/TestWebApp/Commands/Install.yaml
+++ b/Setup/Applications/WinRmApp/Services/TestWebApp/Commands/Install.yaml
@@ -4,17 +4,19 @@ commandUnitType: COMMAND
 commandUnits:
 - command: |-
     Import-Module WebAdministration
+
     $siteName="Default Web Site"
-    $appName="harness-demo"
+    $appName="demo"
     $deploymentId=[guid]::NewGuid().ToString()
     $artifactFilename = $env:TEMP + "\" + $deploymentId + ".zip"
     $appPhysicalDirectory=$env:SystemDrive + "\App\" + $deploymentId
 
-    Write-Host "Starting Deployment [id:]" $deploymentId
+    Write-Host "Starting Deployment [id:" $deploymentId + "]"
 
     Write-Host "Downloading artifact file to" $artifactFilename
     Invoke-WebRequest -Uri https://harnessbuildshare.blob.core.windows.net/build/testapp/test-app-1.0.zip -OutFile $artifactFilename
-    Write-Host "Extracting package.."
+
+    Write-Host "Extracting package to " $appPhysicalDirectory
     Expand-Archive -Path $artifactFilename -DestinationPath $appPhysicalDirectory
 
     Write-Host "Creating Application.."
