Harness IO Git Sync. MODIFY: Setup/Applications/QA-Repro/Services/mysvc/Commands/Install.yaml

--- a/Setup/Applications/QA-Repro/Services/mysvc/Commands/Install.yaml
+++ b/Setup/Applications/QA-Repro/Services/mysvc/Commands/Install.yaml
@@ -7,5 +7,5 @@ commandUnits:
   deploymentType: SSH
   name: Install Service
   scriptType: POWERSHELL
-  workingDirectory: $WINGS_RUNTIME_PATH
+  workingDirectory: c:\
 targetToAllEnv: true
