--- a/Setup/Applications/QA-Repro/Workflows/qarepro-workflow.yaml
+++ b/Setup/Applications/QA-Repro/Workflows/qarepro-workflow.yaml
@@ -35,6 +35,11 @@ phases:
     stepsInParallel: false
   - type: DEPLOY_SERVICE
     name: Deploy Service
+    steps:
+    - type: COMMAND
+      name: Install
+      properties:
+        commandName: Install
     stepsInParallel: false
   - type: ENABLE_SERVICE
     name: Enable Service
