--- a/Setup/Applications/SshTest/Workflows/deployzip.yaml
+++ b/Setup/Applications/SshTest/Workflows/deployzip.yaml
@@ -37,7 +37,7 @@ phases:
       name: My PowerShell Script
       properties:
         connectionAttributes: nu1YJHFmToGzg8cPgOHsnw
-        commandPath: c:\
+        commandPath: $HOME
         scriptType: POWERSHELL
         host: 104.209.40.95
         scriptString: Write-Host 'Hello World'
