Harness IO Git Sync. MODIFY: Setup/Applications/AzureKey/Workflows/test.yaml

--- a/Setup/Applications/AzureKey/Workflows/test.yaml
+++ b/Setup/Applications/AzureKey/Workflows/test.yaml
@@ -30,7 +30,7 @@ phases:
         fixedInstances: '1'
         desiredInstanceCount: fixedInstances
         maxInstances: 2
-        resizeStrategy: RESIZE_NEW_FIRST
+        resizeStrategy: DOWNSIZE_OLD_FIRST
         serviceSteadyStateTimeout: 10
     stepsInParallel: false
   - type: CONTAINER_DEPLOY
