Harness IO Git Sync. MODIFY: Setup/Applications/July03/Workflows/bluegreen-final.yaml

--- a/Setup/Applications/July03/Workflows/bluegreen-final.yaml
+++ b/Setup/Applications/July03/Workflows/bluegreen-final.yaml
@@ -26,19 +26,18 @@ phases:
     - type: KUBERNETES_SETUP
       name: Blue/Green Service Setup
       properties:
+        replicationControllerName: ${app.name}-${service.name}-${env.name}
+        fixedInstances: '2'
         blueGreen: true
+        desiredInstanceCount: fixedInstances
         blueGreenConfig:
           primaryService:
-            serviceType: ClusterIP
-            protocol: TCP
-            port: 80
-            targetPort: 8080
+            serviceType: LoadBalancer
           stageService:
-            serviceType: ClusterIP
-            protocol: TCP
-            port: 80
-            targetPort: 8080
-        resizeStrategy: RESIZE_NEW_FIRST
+            serviceType: LoadBalancer
+        maxInstances: 2
+        resizeStrategy: Add new instances first, then downsize old instances
+        serviceSteadyStateTimeout: 10
     stepsInParallel: false
   - type: CONTAINER_DEPLOY
     name: Upgrade Stage Containers
