Harness IO Git Sync. MODIFY: Setup/Applications/July03/Workflows/bluegreen-final.yaml

--- a/Setup/Applications/July03/Workflows/bluegreen-final.yaml
+++ b/Setup/Applications/July03/Workflows/bluegreen-final.yaml
@@ -33,9 +33,14 @@ phases:
         blueGreenConfig:
           primaryService:
             serviceType: LoadBalancer
+            port: 80
+            targetPort: 8080
+            protocol: TCP
           stageService:
             serviceType: LoadBalancer
-        maxInstances: 2
+            port: 80
+            targetPort: 8080
+            protocol: TCP
         resizeStrategy: Add new instances first, then downsize old instances
         serviceSteadyStateTimeout: 10
     stepsInParallel: false
