Harness IO Git Sync. MODIFY: Setup/Applications/July03/Workflows/multi-version-service.yaml

--- a/Setup/Applications/July03/Workflows/multi-version-service.yaml
+++ b/Setup/Applications/July03/Workflows/multi-version-service.yaml
@@ -27,7 +27,7 @@ phases:
       name: Kubernetes Service Setup
       properties:
         serviceType: Yaml
-        replicationControllerName: ${app.name}-${service.name}-${env.name}
+        replicationControllerName: ${app.name}-${service.name}-${env.name}-${artifact.buildNo}
         fixedInstances: '1'
         useIstioRouteRule: false
         ingressYaml: |-
