--- a/Setup/Applications/July03/Workflows/multi-version-service.yaml
+++ b/Setup/Applications/July03/Workflows/multi-version-service.yaml
@@ -67,6 +67,13 @@ phases:
     stepsInParallel: false
   - type: CONTAINER_DEPLOY
     name: Deploy Containers
+    steps:
+    - type: ECS_SERVICE_DEPLOY
+      name: Upgrade Containers
+      properties:
+        commandName: Resize Service Cluster
+        instanceUnitType: PERCENTAGE
+        instanceCount: '100'
     stepsInParallel: false
   - type: VERIFY_SERVICE
     name: Verify Service
