Harness IO Git Sync. MODIFY: Setup/Applications/July03/Workflows/multi-version-service.yaml

--- a/Setup/Applications/July03/Workflows/multi-version-service.yaml
+++ b/Setup/Applications/July03/Workflows/multi-version-service.yaml
@@ -27,7 +27,7 @@ phases:
       name: Kubernetes Service Setup
       properties:
         serviceType: Yaml
-        replicationControllerName: ${app.name}-${service.name}-${env.name}-${workflow.releaseNo}
+        replicationControllerName: ${app.name}-${service.name}-${env.name}
         fixedInstances: '1'
         useIstioRouteRule: false
         ingressYaml: |-
@@ -49,6 +49,7 @@ phases:
                   servicePort: ${SERVICE_PORT}
         desiredInstanceCount: fixedInstances
         useIngress: true
+        maxInstances: 2
         serviceYaml: |-
           kind: Service
           apiVersion: v1
