Harness IO Git Sync. MODIFY: Setup/Applications/july13/Workflows/test-k8s.yaml

--- a/Setup/Applications/july13/Workflows/test-k8s.yaml
+++ b/Setup/Applications/july13/Workflows/test-k8s.yaml
@@ -48,7 +48,7 @@ phases:
         useIngress: true
         targetPort: 8080
         useAutoscaler: true
-        replicationControllerName: ${app.name}-${service.name}-${env.name}
+        replicationControllerName: ${app.name}-${service.name}-${env.name}-${workflow.releaseNo}
         fixedInstances: '1'
         protocol: TCP
         useIstioRouteRule: false
