--- a/Setup/Applications/july13/Services/ngnx/Deployment Specifications/Ecs.yaml
+++ b/Setup/Applications/july13/Services/ngnx/Deployment Specifications/Ecs.yaml
@@ -1,25 +1,7 @@
 harnessApiVersion: '1.0'
 type: ECS
-advancedConfig: |-
-  apiVersion: apps/v1
-  kind: Deployment
-  metadata:
-    name: nginx-deployment
-    labels:
-      app: nginx
-  spec:
-    replicas: 1
-    selector:
-      matchLabels:
-        app: nginx
-    template:
-      metadata:
-        labels:
-          app: nginx
-          rev: ${workflow.releaseNo}
-      spec:
-        containers:
-        - name: nginx
-          image: ${DOCKER_IMAGE_NAME}
-          ports:
-          - containerPort: 8080
+containerDefinition:
+  commands:
+  - ''
+  logConfiguration: {}
+  name: DEFAULT_NAME
