--- a/Setup/Applications/july16/Services/hello-stateful/Deployment Specifications/Kubernetes.yaml
+++ b/Setup/Applications/july16/Services/hello-stateful/Deployment Specifications/Kubernetes.yaml
@@ -41,7 +41,7 @@ advancedConfig: |-
   # the name is the same.
   #
   # ---
-  apiVersion: apps/v1
+  apiVersion: apps/v1beta1
   kind: StatefulSet
   metadata:
     name: web
