--- a/Setup/Applications/p2/Workflows/w2.yaml
+++ b/Setup/Applications/p2/Workflows/w2.yaml
@@ -27,7 +27,11 @@ phases:
       name: Kubernetes Service Setup
       properties:
         replicationControllerName: ${app.name}-${service.name}-${env.name}
+        fixedInstances: '1'
+        desiredInstanceCount: fixedInstances
+        maxInstances: 2
         resizeStrategy: RESIZE_NEW_FIRST
+        serviceSteadyStateTimeout: 10
     stepsInParallel: false
   - type: CONTAINER_DEPLOY
     name: Deploy Containers
