--- a/Setup/Applications/p2/Workflows/w3-bg.yaml
+++ b/Setup/Applications/p2/Workflows/w3-bg.yaml
@@ -26,7 +26,9 @@ phases:
     - type: KUBERNETES_SETUP
       name: Blue/Green Service Setup
       properties:
+        replicationControllerName: ${app.name}.${service.name}.${env.name}
         blueGreen: true
+        desiredInstanceCount: runningInstances
         blueGreenConfig:
           primaryService:
             serviceType: ClusterIP
@@ -38,7 +40,9 @@ phases:
             protocol: TCP
             port: 80
             targetPort: 8080
-        resizeStrategy: RESIZE_NEW_FIRST
+        maxInstances: ''
+        resizeStrategy: Add new instances first, then downsize old instances
+        serviceSteadyStateTimeout: 10
     stepsInParallel: false
   - type: CONTAINER_DEPLOY
     name: Deploy Containers
