--- a/Setup/Applications/p2/Workflows/w44.yaml
+++ b/Setup/Applications/p2/Workflows/w44.yaml
@@ -25,6 +25,35 @@ phases:
     steps:
     - type: KUBERNETES_SETUP
       name: Kubernetes Service Setup
+      properties:
+        serviceType: ClusterIP
+        replicationControllerName: ${app.name}.${service.name}.${env.name}
+        protocol: TCP
+        useIstioRouteRule: false
+        port: 80
+        ingressYaml: |-
+          # Required placeholders: ${SERVICE_NAME} and ${SERVICE_PORT}
+          # ---
+          apiVersion: extensions/v1beta1
+          kind: Ingress
+          metadata:
+           name: name-will-be-replaced
+           annotations:
+            ingress.kubernetes.io/rewrite-target: /
+          spec:
+            rules:
+            - http:
+               paths:
+               - path: /path
+                 backend:
+                  serviceName: ${SERVICE_NAME}
+                  servicePort: ${SERVICE_PORT}
+        desiredInstanceCount: runningInstances
+        useIngress: true
+        maxInstances: ''
+        targetPort: 8080
+        resizeStrategy: RESIZE_NEW_FIRST
+        serviceSteadyStateTimeout: 10
     stepsInParallel: false
   - type: CONTAINER_DEPLOY
     name: Deploy Containers
