Harness IO Git Sync. MODIFY: Setup/Applications/p2/Workflows/multi-version.yaml

--- a/Setup/Applications/p2/Workflows/multi-version.yaml
+++ b/Setup/Applications/p2/Workflows/multi-version.yaml
@@ -28,8 +28,11 @@ phases:
       properties:
         replicationControllerName: ${app.name}-${service.name}-${env.name}-${workflow.releaseNo}
         fixedInstances: '2'
+        serviceType: ClusterIP
+        protocol: TCP
+        port: 80
         desiredInstanceCount: fixedInstances
-        maxInstances: 2
+        targetPort: 8080
         resizeStrategy: RESIZE_NEW_FIRST
         serviceSteadyStateTimeout: 10
     stepsInParallel: false
