Harness IO Git Sync. MODIFY: Setup/Applications/sstest/Services/ss/Deployment Specifications/Kubernetes.yaml

--- a/Setup/Applications/sstest/Services/ss/Deployment Specifications/Kubernetes.yaml
+++ b/Setup/Applications/sstest/Services/ss/Deployment Specifications/Kubernetes.yaml
@@ -1,7 +1,7 @@
 harnessApiVersion: '1.0'
 type: KUBERNETES
 advancedConfig: |-
-  apiVersion: apps/v1
+  apiVersion: apps/v1beta1
   kind: StatefulSet
   metadata:
     name: web
