--- a/Setup/Applications/jul26/Workflows/deploy-bg-1.yaml
+++ b/Setup/Applications/jul26/Workflows/deploy-bg-1.yaml
@@ -92,6 +92,12 @@ rollbackPhases:
   - type: ROUTE_UPDATE
     name: Route Update
     phaseStepNameForRollback: Route Update
+    steps:
+    - type: KUBERNETES_SWAP_SERVICE_SELECTORS
+      name: Swap Service Selectors
+      properties:
+        service2: ${STAGE_SERVICE_NAME}
+        service1: ${PRIMARY_SERVICE_NAME}
     stepsInParallel: false
   - type: CONTAINER_DEPLOY
     name: Deploy Containers
