--- a/Setup/Applications/jul26/Workflows/deploy-bg-1.yaml
+++ b/Setup/Applications/jul26/Workflows/deploy-bg-1.yaml
@@ -89,7 +89,7 @@ rollbackPhases:
       name: Swap Service Selectors
       properties:
         service2: ${STAGE_SERVICE_NAME}
-        service1: ${PRIMARY_SERVICE_NAME}1
+        service1: ${PRIMARY_SERVICE_NAME}
     stepsInParallel: false
   - type: CONTAINER_DEPLOY
     name: Deploy Containers
